<?xml version="1.0" encoding="utf-8"?>
<resources>
	<!-- MISC -->
    <string name="app_name">Guess What (Game)</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_start">StartActivity</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_solve">SolveActivity</string>
    <string name="start">Start</string>
    <string name="solve">Solve</string>
    <string name="map">Map</string>
    <string name="t_clues">Clues: </string>
    <string name="t_enter_solution">Enter solution:</string>
    <string name="t_btn_back">Back</string>
    <string name="t_btn_try">Try</string>
    <string name="clues_var_names">_CLUE</string>
    <string name="clues_var_separator">;;;</string>
    <string name="enigma_solution_var">enigmaSolution</string>
    <string name="update">Update</string>
    <string name="markers_title">CLUE #</string>
    <string name="toto">toto</string>

    <!-- StartActivity -->
    <string name="gamesrules">The aim of the game is to find the clues placed on the map. 
        		The player has to walk near (1km) to the clue to discover it. 
        		When you discover a clue, you can review it on the Solve Page where you can see all the clues you discovered yet.
        		On the Solve Page, you can try to resolve the enigma thanks to the clues. 
        		If you\'re wrong, you can try again or come back to the map to discover an other clue. If you\'re right, you win and you can quit the game. 
        		Each time you open the game, a new enigma is loaded.
        		Enjoy ! :)</string>

    <!-- Map Strings -->
    <string name="not_close_enough">Not close enough</string>
    <string name="gps_settings">GPS settings</string>
    <string name="please_enable_gps">Please enable GPS to use application</string>

</resources>