<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content" android:orientation="vertical" android:layout_gravity="center_horizontal">
<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="center_horizontal" android:layout_margin="5dip" android:textSize="20dip" android:text="@string/please_enable_gps"></TextView>
<LinearLayout android:id="@+id/LinearLayout01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="center_horizontal" android:layout_margin="5dip">
<Button android:layout_height="wrap_content" android:id="@+id/gps_sett_button" android:text="@string/gps_settings" android:layout_width="130dip"></Button>
<Button android:layout_height="wrap_content" android:id="@+id/gps_cancel_button" android:text="@string/cancel" android:layout_width="130dip"></Button></LinearLayout>
</LinearLayout>