<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SolveActivity" >
   
    <TextView
        android:id="@+id/textEnterSolution"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_map"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="85dp"
        android:layout_marginLeft="18dp"
        android:text="@string/t_enter_solution"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/editSolution"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textEnterSolution"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"
        android:ems="10" />   

    <TextView
        android:id="@+id/textClues"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textClue1Val"
        android:layout_alignLeft="@+id/textEnterSolution"
        android:text="@string/t_clues"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/btn_map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/textClue3Val"
        android:minHeight="50dip"
        android:minWidth="200dip"
        android:onClick="goToMapActivityClick"
        android:text="@string/t_btn_back" />

    <Button
        android:id="@+id/buttonTry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/textClue3Val"
        android:onClick="onTryClick"
        android:text="@string/t_btn_try" />

    <TextView
        android:id="@+id/textViewCluesList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textEnterSolution"
        android:layout_below="@+id/textClues"
        android:layout_marginTop="15dp"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>